Добавлено сохранение пресетов оружия
